lintian (2.5.60) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/control-file.{desc,pm}:
    + [AB] Add classification tags for R³.
  * checks/cruft.desc:
    + [CL] Add suggested [[:space:]]-based sed call for
      file-contains-trailing-whitespace. Thanks to Stuart Prescott.
      (Closes: #881389)

  * data/spelling/corrections:
    + [PW] Add several corrections.

 -- Chris Lamb <lamby@debian.org>  Thu, 09 Nov 2017 09:09:49 +0000

lintian (2.5.59) unstable; urgency=medium

  * lib/Lintian/Check.pm:
    + [CL] Don't warn about duplicate words when separated by punctuation.
      (Closes: #822504)

  * data/fields/*:
    + [CL] Apply patch from Guillem Jover to add a "golang" archive
      section.  (Closes: #880701)

 -- Chris Lamb <lamby@debian.org>  Thu, 09 Nov 2017 08:48:00 +0000

lintian (2.5.58) unstable; urgency=medium

  * checks/cruft.pm:
    + [CL] Rewrite file-contains-trailing-whitespace tag to be a hash from
      the filename to the regex we should match.
    + [CL] Allow trailing tabs in debian/rules files; they are a very
      common idiom in Makefiles.
  * checks/fields.desc:
    + [SL] Update of the documentation for the change introduced in 2.5.53:
      Transitional packages should now be "oldlibs/optional" rather
      than "oldlibs/extra".
  * checks/python.pm:
    + [CL] Don't count python-django and python3-django as Django modules.
      This avoids a warning where Django itself triggers
      "django-package-does-not-depend-on-django".

  * data/fields/name_section_mappings:
    + [CL] Apply patch from Simon McVittie to prevent a misdetection of
      libcanberra-gstreamer as a GNU Smalltalk library.  (Closes: #880140)
  * data/spelling/corrections:
    + [AB] Add more misspellings of the word "dependency".

  * doc/lintian.xml:
    + [CL] Improve overrides docs using source-is-missing as an example.
      (Closes: #838807)

  * vendors/ubuntu/main/data/changes-file/known-dists: