@@ -12,6 +12,9 @@ lintian (2.5.60) UNRELEASED; urgency=medium
   * data/spelling/corrections:
     + [PW] Add several corrections.
 
+  * lib/Test/Lintian/Harness.pm, t/runtests, t/tests/README:
+    + [AB] Add support for a "Test-Conflicts" field.
+
  -- Chris Lamb <lamby@debian.org>  Thu, 09 Nov 2017 09:09:49 +0000
 
 lintian (2.5.59) unstable; urgency=medium
